# LI1

./: .gitignore  2022li1g030.cabal  README.md
doc/html/: Main.html  Tarefa1_2022li1g030.html  Tarefa2_2022li1g030.html  Tarefa3_2022li1g030.html  Tarefa4_2022li1g030.html  Tarefa5_2022li1g030.html  Tarefa6_2022li1g030.html  doc-index.html  index.html
src/: Main.hs  Tarefa1_2022li1g030.hs  Tarefa2_2022li1g030.hs  Tarefa3_2022li1g030.hs  Tarefa4_2022li1g030.hs  Tarefa5_2022li1g030.hs  Tarefa6_2022li1g030.hs
tests/: Fase1.hs  Spec.hs  Tarefa1_2022li1g030_Spec.hs  Tarefa2_2022li1g030_Spec.hs  Tarefa3_2022li1g030_Spec.hs  Tarefa4_2022li1g030_Spec.hs  Tarefa5_2022li1g030_Spec.hs
